@@ -2,12 +2,13 @@ package Dist::Zilla::Plugin::PPPort;
 # vi:noet:sts=2:sw=2:ts=2
 
 use Moose;
-with qw/Dist::Zilla::Role::FileGatherer Dist::Zilla::Role::PrereqSource/;
+with qw/Dist::Zilla::Role::FileGatherer Dist::Zilla::Role::PrereqSource Dist::Zilla::Role::AfterBuild/;
 use Moose::Util::TypeConstraints 'enum';
 use MooseX::Types::Perl qw(StrictVersionStr);
 use MooseX::Types::Stringlike 'Stringlike';
 use Devel::PPPort 3.23;
 use File::Spec::Functions 'catdir';
+use File::pushd 'pushd';
 
 has style => (
 	is  => 'ro',
@@ -44,12 +45,35 @@ has version => (
 sub gather_files {
 	my $self = shift;
 	Devel::PPPort->VERSION($self->version);
+	require Dist::Zilla::File::InMemory;
 	$self->add_file(Dist::Zilla::File::InMemory->new(
 		name => $self->filename,
 		content => Devel::PPPort::GetFileContents($self->filename),
 		encoding => 'ascii',
 	));
 	return;
+}
+
+sub after_build {
+	my ($self, $args) = @_;
+	my $build_root = $args->{build_root};
+
+	my $wd = pushd $build_root;
+
+	my $filename = $self->filename;
+
+	my $perl_prereq = $self->zilla->prereqs->cpan_meta_prereqs
+		->merged_requirements([ qw(configure build runtime test) ], ['requires'])
+		->requirements_for_module('perl') || '5.006';
+
+	if ($self->logger->get_debug) {
+		chomp(my $out = `$^X $filename --compat-version=$perl_prereq`);
+		$self->log_debug($out) if $out;
+	}
+	else {
+		chomp(my $out = `$^X $filename --compat-version=$perl_prereq --quiet`);
+		$self->log_debug($out) if $out;
+	}
 }
 
 sub register_prereqs {
@@ -92,4 +116,5 @@ This describes the minimal version of Devel::PPPort required for this module. It
 =for Pod::Coverage
 gather_files
 register_prereqs
+after_build
 =end
